<resources>
    <!-- General keys -->
    <string name="app_name">Imagination for People</string>
    <string name="app_favorites">My favorites projects</string>
    <string name="app_groups">Groups</string>
    <string name="app_createproject">Add a project</string>
    <string name="app_uploadphoto">Upload a photo</string>
    <string name="search_hint">Search projects</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="cant_be_undone">This action can\'t be undone!</string>
    
    <!-- Navigaton drawer keys -->
    <string-array name="drawer_items">
        <item>Projects</item>
        <item>Groups</item>
        <item>Favorites</item>
    </string-array>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_open">Open drawer</string>
    
    <!-- Information keys -->
    <string name="information_description">Information:</string>
    
    <!-- Loading keys -->
    <string name="loading_location">Waiting for your location</string>
    <string name="loading_projects">Loading projects</string>
    <string name="loading_groups">Loading groups</string>
    
    <!-- Error keys -->
    <string name="error_image">An error has occurred!</string>
    
    <!-- Homepage keys -->
    <string name="homepage_shake_description">Shake it</string>
    <string name="homepage_menu_search">Search</string>
    <string name="homepage_menu_addproject">Add a project</string>
    <string name="homepage_menu_favorites">Favorites</string>
    <string name="homepage_menu_language">Change language</string>
    <string name="homepage_spinner_language_prompt">Choose a language</string>
    <string name="homepage_spinner_content_prompt">Select projects to display</string>
    <string-array name="homepage_spinner_languages">
        <item>Chinese</item>
        <item>English</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Italian</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="homepage_spinner_dropdown">
        <item>To Discover</item>
        <item>Latest Projects</item>
        <item>In My Country</item>
    </string-array>
    
    <!-- Shake dialog keys -->
    <string name="shake_dialog_title">Just shake it!</string>
    <string name="shake_dialog_message">Shake your device just a bit stronger and we\'ll show you a random project.\nDiscovery of new projects is now fun!</string>
    <string name="shake_dialog_checkbox">Never show me this again</string>
    
    <!-- ProjectsList keys -->
    <string name="projectslist_loading">Loading projects…</string>
    <string name="projectslist_item_image_description">Project image</string>
    
    <!-- UsersList keys -->
    <string name="userslist_item_image_description">User avatar</string>
    
    <!-- ProjectView keys -->
    <string name="projectview_menu_addphoto">Add a photo</string>
    <string name="projectview_menu_favorites_add">Add to favorites</string>
    <string name="projectview_menu_favorites_remove">Remove from favorites</string>
    <string name="projectview_menu_share">Share project</string>
    <string name="projectview_menu_share_dialog">Share project with…</string>
    <string name="projectview_toast_favorites_add">%1$s added to favorites</string>
    <string name="projectview_toast_favorites_remove">%1$s removed from favorites</string>
    <string name="projectview_dialog_addphoto_title">Add a photo to project…</string>
    <string-array name="projectview_dialog_addphoto_items">
        <item>Using the camera</item>
        <item>By selecting a file</item>
    </string-array>
    <string name="projectview_root_info">INFORMATION</string>
    <string name="projectview_root_gallery">GALLERY</string>
    <string name="projectview_description_image_description">Project image</string>
    <string name="projectview_description_bestof">Editor\'s pick</string>
    <string name="projectview_description_status_idea">Concept</string>
    <string name="projectview_description_status_begin">Starting</string>
    <string name="projectview_description_status_wip">In development</string>
    <string name="projectview_description_status_end">Mature</string>
    <string name="projectview_description_website">View website</string>
    <string name="projectview_description_about">About the project</string>
    <string name="projectview_description_themes">THEMES</string>
    <string name="projectview_description_objectives">OBJECTIVES</string>
    <string name="projectview_description_members">MEMBERS</string>
    <string name="projectview_gallery_slider_content_date">Date: %1$s</string>
    <string name="projectview_gallery_slider_content_description">Description: %1$s</string>
    <string name="projectview_gallery_slider_content_author">Author: %1$s</string>
    <string name="projectview_gallery_slider_content_source">Source: %1$s</string>
    
    <!-- CreateProject keys -->
    <string name="createproject_send">Send project</string>
    <string name="createproject_title">Title</string>
    <string name="createproject_title_empty">You have to set a title</string>
    <string name="createproject_baseline">Baseline</string>
    <string name="createproject_status">Status</string>
    <string-array name="createproject_statuses">
        <item>Concept</item>
        <item>Starting</item>
        <item>In development</item>
        <item>Mature</item>
    </string-array>
    <string name="createproject_about_section">About section</string>
    <string name="createproject_themes">Themes</string>
    <string name="createproject_themes_hint">Separate themes with commas</string>
    <string name="createproject_loading">Creating the project…</string>
    <string name="createproject_cancel_title">Cancel project creation?</string>
    <string name="createproject_cancel_message">Your project won\'t be available online!</string>
    
    <!-- UploadPhoto keys -->
    <string name="uploadphoto_send">Send photo</string>
    <string name="uploadphoto_thumb_description">Image to upload</string>
    <string name="uploadphoto_description">Photo description</string>
    <string name="uploadphoto_license_title">Photo license</string>
    <string-array name="uploadphoto_license_content">
        <item>CC BY-SA 2.0</item>
        <item>CC BY-SA 3.0 (recommended)</item>
        <item>Copyright (to avoid)</item>
        <item>FreeArt</item>
        <item>GNU Free License</item>
        <item>Public domain</item>
        <item>Warning - Uncertain license</item>
    </string-array>
    <string name="uploadphoto_author">Author</string>
    <string name="uploadphoto_source">Photo source</string>
    <string name="uploadphoto_error_unknown_image_1">We can\'t find the image you\'ve just selected</string>
    <string name="uploadphoto_error_unknown_image_2">Try again and make sure you have selected an image</string>
    <string name="uploadphoto_error_unsupported_application_1">Unsupported application</string>
    <string name="uploadphoto_error_unsupported_application_2">The application you tried to use to send a picture is unsupported. Please make a bug report with the name of the used application.</string>
    <string name="uploadphoto_loading">Uploading photo to server…</string>
    <string name="uploadphoto_cancel_title">Cancel photo uploading?</string>
    <string name="uploadphoto_cancel_message">Your photo won\'t be available online!</string>
    
    <!-- GroupView keys -->
    <string name="groupview_menu_share">Share group</string>
    <string name="groupview_menu_share_dialog">Share group with…</string>
    <string name="groupview_root_info">INFORMATION</string>
    <string name="groupview_root_projects">PROJECTS</string>
    <string name="groupview_root_members">MEMBERS</string>
    <string name="groupview_description_image_description">Group image</string>
    <string name="groupview_description_themes">THEMES</string>
    <string name="groupview_description_about">ABOUT THE GROUP</string>
    <string name="groupview_projects_noprojects">There is not any related projects in this group</string>
    <string name="groupview_subscribers_nosubscribers">Nobody has subscribed to this group</string>
    
    <!-- Favorites keys -->
    <string name="favorites_menu_remove_all">Remove all favorites</string>
    <string name="favorites_dialog_remove_all_title">Remove all favorites?</string>
    <string name="favorites_no">You don\'t have any favorite</string>
    <string name="favorites_no_anymore">You have no more favorites</string>
    
    <!-- Search keys -->
    <string name="search_searching">Searching %1$s</string>
    <string name="search_menu_search">Search</string>
    
    <!-- Error keys -->
    <string name="error_server">Server problem</string>
    <string name="error_server_timeout">The server didn\'t respond in time.</string>
    <string name="error_server_badanswer">Cannot understand server\'s answer.</string>
    <string name="error_json">JSON error</string>
    <string name="error_json_badanswer">It seems the server\'s answer is malformed because we cannot understand the JSON.</string>
    <string name="error_unknown">Unknown error</string>
    <string name="error_unknown_message">An unhandled error has occurred. Please make a bug report :)</string>
    <string name="error_location">Cannot get location</string>
    <string name="error_location_message">We cannot get your location. Please verify if access location from Wi-Fi is enabled.</string>
</resources>
