<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
	    
	    <RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="150dp"
		    android:minHeight="150dp">
	    
		    <ImageView
		        android:id="@+id/groupview_description_image"
		        android:layout_width="match_parent"
		        android:layout_height="150dp"
		        android:contentDescription="@string/groupview_description_image_description"
		        android:scaleType="centerCrop"
		        android:src="@drawable/group_nophoto" />
		    
		    <LinearLayout
		        style="@style/blackBackground"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
		        android:orientation="vertical"
				android:id="@+id/groupview_description_overlay"
		        android:paddingTop="5dp"
		        android:paddingLeft="10dp"
		        android:paddingBottom="5dp"
		        android:height="35dp">
		        
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:id="@+id/groupview_description_title"
		            android:textAllCaps="true"
		            android:textColor="@android:color/white"
		            android:textSize="20dp"
		            android:textStyle="bold"/>
		        
		        <TextView
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:id="@+id/groupview_description_baseline"
		            android:textColor="@android:color/white"
		            android:textStyle="italic" />
		        
	        </LinearLayout>
		           
		</RelativeLayout>
		
	    <LinearLayout 
	        style="@style/colorContainer"
	        android:id="@+id/groupview_description_themes_container">
	        
	        <TextView
	            style="@style/colorTitle"
	            android:text="@string/groupview_description_themes"
	            android:textColor="@color/themes" />
	        
	        <View 
	            style="@style/colorLine"
	            android:background="@color/themes" />
	        
	        <TextView
	            style="@style/colorText"
	            android:id="@+id/groupview_description_themes_text" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	    	android:layout_width="match_parent"
	   		android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:id="@+id/groupview_description_about_container"
		    android:padding="10dp"
		    android:paddingBottom="0dp">
	        
	       	<TextView
	        	android:layout_width="match_parent"
	         	android:layout_height="wrap_content"
	         	android:text="@string/groupview_description_about"
	         	android:textAllCaps="true"
	         	android:textStyle="bold" />
	     
	     	<TextView
	         	android:layout_width="match_parent"
	         	android:layout_height="wrap_content"
	         	android:id="@+id/groupview_description_about_text" />
	        
	    </LinearLayout>
	    
	</LinearLayout>
    
</ScrollView>
